@@ -25,7 +25,7 @@ Description: GPU/CPU Benchmarking for Debian-package based system
  used. For Intel MKL we use the Revolution R packages from Ubuntu 9.10.
 License: GPL (>= 2)
 LazyLoad: yes
-Depends: R (>= 2.11.1), RSQLite
+Depends: R (>= 2.11.1), RSQLite, plyr, reshape
 Suggests: magma, gputools, Matrix
 SystemRequirements: Debian or Ubuntu system with access to Goto Blas and
  Intel MKL as well as Nvidia GPU with CUDA support
