@@ -1,6 +1,12 @@
+2010-09-03  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/analysis.R: Analysis of log/log plot
+
+	* DESCRIPTION: Added Depends: on plyr and reshape
+
 2010-09-02  Dirk Eddelbuettel  <edd@debian.org>
 
-	* DESCRIPTION: Version 0.2.0
+	* DESCRIPTION: Increased to 'Version 0.2.0'
 
 	* inst/sql/gcbd.sqlite: Results from 'run 2'
 
